--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "NodeBM",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "A simple node.js application to store user bookmarks. Uses MongoDB driver to conntect to the database.",
+  "license": "MIT",
+  "author": {
+    "name": "Dmitry Noranovich",
+    "email": "noranovichd (at) gmail (dot) com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/javaeeeee/NodeBM.git"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -10,9 +20,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "jade": "~1.11.0",
     "mongodb": "^2.1.11",
     "morgan": "~1.6.1",
+    "passport": "^0.3.2",
     "serve-favicon": "~2.3.0"
   }
 }
