--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
+    "body-parser": "~1.15.1",
+    "bootstrap": "^3.3.7",
+    "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "jade": "~1.11.0",
-    "mongodb": "^2.1.11",
-    "morgan": "~1.6.1",
+    "mongodb": "^2.2.10",
+    "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "serve-favicon": "~2.3.0"
   }
