--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "jade": "~1.11.0",
+    "jquery": "^3.1.1",
     "mongodb": "^2.2.10",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
