--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "type": "git",
     "url": "https://github.com/javaeeeee/NodeBM.git"
   },
+  "engines": {
+    "node":"~6.5.0",
+    "npm":"~3.10.6"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
