--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "url": "https://github.com/javaeeeee/NodeBM.git"
   },
   "engines": {
-    "node":"~6.5.0",
-    "npm":"~3.10.6"
+    "node": "~6.5.0",
+    "npm": "~3.10.6"
   },
   "private": true,
   "scripts": {
@@ -32,5 +32,12 @@
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.6.0",
+    "eslint-config-airbnb": "^11.2.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0"
   }
 }
